--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Friedrich Wolfgang Keppeler"
+  name             : "Friedrich W. Keppeler"
   avatar           : "profile.png"
   bio              : "Community ecologist, data scientist, and investor"
   location         : "College Station, Texas"
@@ -101,9 +101,8 @@ author:
   keybase          :
   instagram        :
   impactstory      : 
-  LattesPlatform   : "http://lattes.cnpq.br/4743340542470876"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/friedrich-keppeler-4b8aa6123/"
+  linkedin         : "friedrich-keppeler-4b8aa6123"
   orcid            : "http://orcid.org/0000-0002-5165-1298"
   pinterest        :
   soundcloud       :
