--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Friedrich W. Keppeler"
   avatar           : "profile.png"
   bio              : "Community ecologist, data scientist, and investor"
-  location         : "College Station, Texas"
+  location         : "Madison, Wisconsin"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=iruzc9EAAAAJ&hl=pt-BR"
