--- a/_config.yml
+++ b/_config.yml
@@ -175,7 +175,7 @@ kramdown:
 
 # Collections
 collections:
-  research:
+  teaching:
     output: true
     permalink: /:collection/:path/
   publications:
@@ -204,10 +204,10 @@ defaults:
     values:
       layout: single
       author_profile: true
-  # _research
+  # _teaching
   - scope:
       path: ""
-      type: research
+      type: teaching
     values:
       layout: single
       author_profile: true
